erDiagram

    accounts {
        int account_id PK
        varchar full_name
        varchar email
        varchar password_hash "nullable - null for Google-only accounts"
        varchar role "Customer or Staff or SuperAdmin"
        varchar contact_number
        varchar address
        varchar auth_provider "Local or Google"
        boolean two_factor_enabled
        varchar totp_secret "nullable"
        int login_attempts
        timestamptz locked_until "nullable"
        timestamptz created_at
        boolean is_active
        text profile_picture "nullable"
        uuid auth_user_id "nullable - Google UID"
    }

    login_validity {
        int validity_id PK
        int account_id FK
        varchar validity_status "Valid or Invalid or Locked or Banned"
        int failed_attempts
        timestamptz locked_until "nullable"
        boolean requires_2fa
        timestamptz last_validated_at
    }

    sessions {
        int session_id PK
        int account_id FK
        varchar token_hash
        varchar login_method "Local or Google or 2FA"
        timestamptz created_at
        timestamptz expires_at
    }

    password_reset_tokens {
        int token_id PK
        int account_id FK
        varchar token_hash
        timestamp expires_at
        timestamp created_at
        boolean used
    }

    security_logs {
        int log_id PK
        int account_id FK "nullable"
        varchar email_attempted
        varchar event_type "login_fail or lockout or reset_request"
        varchar ip_address
        int attempts_count
        boolean lockout_triggered
        boolean reset_requested
        timestamptz created_at
    }

    notifications {
        int notification_id PK
        int account_id FK "customer recipient"
        varchar title
        text message
        boolean is_read
        timestamp created_at
    }

    admin_notifications {
        int id PK
        int account_id FK "staff or admin recipient"
        varchar title
        text message
        varchar link_tab "which admin tab to open"
        boolean is_read
        timestamptz created_at
    }

    orders {
        int order_id PK
        varchar order_code "unique e.g. SD-XXXX"
        int account_id FK
        int package_id FK "legacy nullable - KNOWN ISSUE approved as-is"
        int[] package_ids "array of package IDs - current"
        varchar pickup_address
        varchar delivery_address
        varchar load_size "Small or Medium or Large"
        timestamptz pickup_slot
        timestamptz delivery_slot
        varchar status "Received or Washing or Drying or Ready for Delivery or Out for Delivery or Completed or Cancelled"
        text notes
        timestamptz created_at
        int rider_id FK "nullable"
        numeric map_lat
        numeric map_lng
    }

    packages {
        int package_id PK
        varchar package_name
        varchar description
        numeric price
        boolean is_active
    }

    payments {
        int payment_id PK
        int order_id FK
        varchar payment_method "Cash or Online"
        numeric amount
        varchar payment_status "Pending or Paid or Failed or Refunded"
        timestamptz paid_at "nullable"
    }

    order_tracking {
        int tracking_id PK
        int order_id FK
        varchar rider_name "snapshot at assignment"
        text claim_qr_code "legacy - no longer shown to customer"
        varchar delivery_status
        timestamptz updated_at
    }

    riders {
        int rider_id PK
        varchar name
        varchar phone
        varchar vehicle
        varchar status "Available or On Duty or Off Duty"
        timestamp created_at
    }

    feedback {
        int feedback_id PK
        int order_id FK
        int account_id FK
        int rating "1 to 5 stars"
        text comment
        timestamptz submitted_at
    }

    saved_orders {
        int saved_order_id PK
        int account_id FK
        int order_id FK
        timestamptz starred_at
    }

    weather_checks {
        int weather_check_id PK
        int order_id FK "nullable"
        varchar forecast_result "Clear or Rain etc"
        varchar description
        boolean warning
        timestamptz checked_at
    }

    chat_messages {
        int message_id PK
        int room_id FK "FK to accounts customer"
        int sender_id FK "FK to accounts"
        varchar sender_name
        varchar sender_role
        text message
        timestamp created_at
    }

    staff_messages {
        int message_id PK
        int sender_id FK
        text content
        timestamptz created_at
    }

    admin_logs {
        int log_id PK
        int admin_id FK "nullable"
        varchar action
        text details
        timestamp created_at
    }

    api_logs {
        int log_id PK
        varchar api_name "GoogleMaps or Semaphore or OpenWeatherMap or QRServer"
        varchar endpoint
        varchar error_type
        text error_message
        int retry_count
        boolean recovered
        varchar severity "Low or Medium or High or Critical"
        timestamptz created_at
    }

    promotions {
        int promo_id PK
        varchar title
        text description
        text image_url
        boolean is_active
        timestamp created_at
    }

    platform_settings {
        varchar setting_key PK
        text setting_value
        timestamp updated_at
    }

    %% ── Relationships ────────────────────────────────────

    accounts ||--|| login_validity : "is validated by"
    accounts ||--o{ sessions : "has"
    accounts ||--o{ password_reset_tokens : "requests"
    accounts ||--o{ security_logs : "generates"
    accounts ||--o{ notifications : "receives"
    accounts ||--o{ admin_notifications : "receives"
    accounts ||--o{ chat_messages : "sends"
    accounts ||--o{ staff_messages : "sends"
    accounts ||--o{ admin_logs : "performs"
    accounts ||--o{ orders : "places"
    accounts ||--o{ saved_orders : "saves"
    accounts ||--o{ feedback : "submits"

    orders ||--o| payments : "has"
    orders ||--o| order_tracking : "has"
    orders ||--o{ saved_orders : "saved by"
    orders ||--o{ feedback : "receives"
    orders ||--o| weather_checks : "has"
    orders }o--|| riders : "assigned to"
